# BU-RA-TI-NO

./: .env.integration.example  .env.smoke.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.integration.yml  docker-compose.local.yml  main.py  matched_event_ids.txt  pyproject.toml
docs/: AGENTS_LOG.md  PRD.md  SPEC.md  buratino_integration_contract.md  integration_manual_worker_check.md  logic.md  prd.md
documents/: Мероприятия (2).xlsx  отчет_по_работе_программы_ЦПМ.xlsx
ids/: enriched_event_ids.txt  relation_overflow_ids.txt  results_97-6_error_ids.txt  retry_ids.txt
migrations/: 0001_buratino_analysis_jobs.sql  0002_buratino_event_analysis_results.sql
prompts/: confirming_documents_relation.md  document_ranking.md  event_fact_summary.md  event_type_resolution.md  json_repair.md  logic_audit.md  phr_fact_summary.md
scripts/: run_smoke.sh
src/buratino/: __init__.py  app.py  bootstrap.py  logging.py
tests/: conftest.py
tests/integration/: fakes.py  test_audit_logic_flip.py  test_cli_fail_closed_path.py  test_cli_happy_path.py  test_diagnostic_reporting.py  test_malformed_llm_output.py  test_missing_phr_path.py  test_ocr_fallback_path.py
tests/unit/: test_aggregator.py  test_analysis_plan_status.py  test_cli.py  test_config.py  test_confirming_documents_relation.py  test_document_ranking.py  test_fake_llm_client.py  test_integration_debug.py  test_json_parser.py  test_llm_client.py  test_ocr_chunking.py  test_prompt_contracts.py  test_report_contract.py  test_result_contract_v2.py  test_status_explanation.py  test_target_builder.py  (+2 more)
(+49 files in other folders)
